# AlphaKnit-Topology

./: .gitignore  CONTRIBUTING.md  README.md  alphaknit_colab_phase10.ipynb  app.py  check_all_encodings.py  debug_parser.py  fix_encodings.py  pyproject.toml  requirements.txt  requirements_pc.txt  run_pc.bat  test_best_model.py  test_output.txt  train_alphaknit_colab.py  training_issue_summary.txt
docs/: New_Discussion.txt  New_Discussion_2.txt  New_Discussion_3.txt  Project_AlphaKnit_Discussion.txt
notebooks/: train_alphaknit_colab.ipynb
scripts/: eval_phase8.py  eval_phase9.py  evaluate.py  full_train.py  gen_phase9b_data.py  gen_shards_direct.py  generate_stress_test.py  get_last_epoch.py  hparam_search.py  pack_tensor_dataset.py  phase8_train.py  phase9_train.py  plot_curves.py  plot_v6_telemetry.py  quick_train.py  smoke_test_phase8.py  test_beam_comparison.py  test_mask_warning.py  train_entrypoint.py  verify_fix_mask_warning.py
scripts/legacy/: full_train.py  phase8_train.py
src/alphaknit/: canonicalizer.py  compiler.py  config.py  dataset_builder.py  evaluator.py  formatter.py  generator.py  generator_v2.py  inference.py  knitting_dataset.py  metrics.py  model.py  parser.py  research.py  scientific.py  simulator.py  stitch_graph.py  tokenizer.py  train.py  validator.py
src/alphaknit_arigurumi.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
tests/: test_compiler.py  test_dataset_builder.py  test_evaluator.py  test_generator.py  test_integration.py  test_model.py  test_parser.py  test_project_metadata.py  test_scientific.py  test_simulator.py  test_tokenizer.py
(+1 files in other folders)
