[project]
name = "alphaknit-arigurumi"
version = "6.6.1+g"
description = "Mechanistic Discovery Engine for Amigurumi Topology"
authors = [{name = "T.A. Kiet", email = "akietakatak2705@gmail.com"}]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pytest>=7.0.0",
    "scipy>=1.10.0",
    "trimesh>=3.20.0",
    "networkx>=3.0",
    "webdataset>=0.2.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
cuda = ["ninja", "triton"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
